1999-10-31  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_CHECK_MEMBER, AC_CHECK_MEMBERS): New macros.
	* autoheader.m4 (AH_CHECK_MEMBERS): New macro.
	(epilogue): Hook AH_CHECK_MEMBERS on AC_CHECK_MEMBERS.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* autoheader.m4 (AC_FUNC_ALLOCA): Rename from this ...
	(AH_FUNC_ALLOCA): ... to this.  Includes all the needed templates.
	(AC_C_CHAR_UNSIGNED): Rename from this ...
	(AH_C_CHAR_UNSIGNED): ... to this.

1999-10-31  Ben Elliston  <bje@cygnus.com>

	* Makefile.am (CLEANFILES): New explicit variable.
	(editsh): acdatadir is no longer defined, so use pkgdatadir.
	(editpl): Likewise. From Akim Demaille <akim@epita.fr>.
	* Makefile.in: Regenerate.

	* configure: Regenerate.
	* aclocal.m4: Generate.
	* Makefile.in: Regenerate with Automake.
	* testsuite/Makefile.in: Likewise.

1999-10-31  Akim Demaille  <akim@epita.fr>

	Use Automake.  Based on files from Ben Elliston.

	* acgeneral.m4: No longer define AC_ACVERSION, include
 	acversion.m4.
	* acversion.m4.in: New AC_CONFIG_FILE.
	* acspecific.m4: Few formating changes.
	* autoconf.texi: No longer define EDITION, VERSION and UPDATED:
	include version.texi.
	AC_OUTPUT the Makefiles mentioned below and acversion.m4.
	* configure.in: Use AM_INIT_AUTOMAKE.
 	Do not AC_ARG_PROGRAM: AM_INIT_AUTOMAKE does it.
	* Makefile.am: New file.
	* mdate-sh: Likewise.
	* missing: Likewise.
	* testsuite/Makefile.am: Likewise.

1999-10-31  Ben Elliston  <bje@cygnus.com>

	* acspecific.m4 (AC_PROG_CC_STDC, AC_C_PROTOTYPES): Inherit from
	Automake. From Franc,ois Pinard.
	* autoconf.texi (Particular Programs): Document AC_PROG_CC_STDC.
	(C Compiler Characteristics): Document AC_C_PROTOTYPES.

	* testsuite/autoconf.s/defines.exp: Changed `fail' and `pass' in
	`xfail' and `xpass'. The testsuite checks that acconfig.h
	templates the AC_DEFINEs. Since we no longer rely on acconfig.h,
	the test is obsolete.
	* acspecific.m4 (AC_PROG_BINSH, AC_PROG_SED): Don't quote the name