@@ -14,6 +14,7 @@ are also suggestions we should either satisfy right now (they're
 easy), or remove (obsoleted since then).
 
 ** AC_C_STRUCT_MEMBER needs a full rewrite.
+And once done, the former specialized macros should be adapted.
 
 ** AC_CHECK_HEADER should not template config.h entries.
 Its entry in autoheader.m4 should be removed.
